fix spacing text Hompage

--- a/src/scss/partials/_accueil.scss
+++ b/src/scss/partials/_accueil.scss
@@ -19,6 +19,7 @@
             left: 0%;
             z-index: 3;
             padding: 120px;
+            padding-top: 200px;
             &__text{
                 padding-left: 15px;
                 &__paragraph{
